profilelist1exp/unpackaged/objects/Work_Items__c.object
<CustomObject>
    <description>This object is to track all Account Owner Updates</description>
    <fields>
        <fullName>Account_Play__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to store Id of Account Play object</description>
        <inlineHelpText>Account Play</inlineHelpText>
        <label>Account Play</label>
        <referenceTo>Account_Play__c</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accountid</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to store Id of Contact object</description>
        <inlineHelpText>Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <label>Error Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>Stores the primary object of the WorkItem. Read Only for UI. Useful in reports.</description>
        <inlineHelpText>Primary object of the Work Items</inlineHelpText>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Relationship Lead</fullName>
                </value>
                <value>
                    <fullName>Account Play</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to store Id from Opportunity object</description>
        <inlineHelpText>Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <description>test field for testing the prototype</description>
        <inlineHelpText>test field for testing the prototype</inlineHelpText>
        <label>Related Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to store Id of Relationship Lead object</description>
        <inlineHelpText>Relationship Lead</inlineHelpText>
        <label>Relationship Lead</label>
        <referenceTo>Relationship_Lead__c</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed-Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ownerid</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>if_same_owner__c</fullName>
        <formula>IF 
( 
Previous_Owner__r.Id = Opportunity__r.OwnerId, 
&quot;True&quot;, 
&quot;False&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>if same owner</label>
        <type>Text</type>
    </fields>
    <label>Work Items</label>
    <nameField>
        <displayFormat>WI-{00000000}</displayFormat>
        <label>Work Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>